2007-06-15 Raphael Neider <rneider AT web.de>

	* src/pic16/devices.inc,
	* device/lib/pic16/pics.all,
	* device/include/pic16/pic18fregs.h,
	* device/include/pic16/pic18f[24][45]20.h,
	* device/lib/pic16/libdev/pic18f[24][45]20.c: added support for
	  18f2420, 18f2520, and 18f4420 devices, updated 18f4520 definitions
	* device/lib/pic16/Makefile.in: faster cleanup

2007-06-13 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/peeph.def: added 177.i (mov from a is slightly cheaper)

2007-06-13 Raphael Neider <rneider AT web.de>

	* src/SDCCmain.c: prevent NULL pointer dereference, avoid warning

2007-06-12 Raphael Neider <rneider AT web.de>

	* support/scripts/inc2h.pl: conditionally emit defines for SFR bits,
	  suppress bit defines if NO_BIT_DEFINES is #define'd
	* device/include/pic/pic*.h: recreated all headers to include
	  conditional bit defines
	* device/include/pic/pic16f886.h,
	* device/include/pic/pic16f887.h: fixed based on newer .inc file
	* device/include/pic/recreate.sh: script to recreate the complete
	  device library files based on the currently supported devices

2007-06-12 Borut Razem <borut.razem AT siol.net>

	* src/pic16/main.c, src/SDCCargs.h, SDCCmain.c,
	  support/regression/Makefile.in, support/scripts/build.mak,
	  support/scripts/Makefile.snapshot:
	  use new svn URL scheme
	* doc/sdccman.lyx: SDCC Wiki moved to
	  http://sdcc.wiki.sourceforge.net/

2007-06-10 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/peeph.def: disabled rule 132.d to fix #1734654
	* support/regression/tests/bug1734654.c: added

2007-06-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (decorateType): optimized '?' for equal operands
	* src/SDCCicode.c (geniCodeConditional): optimization for bit result
	  with literal operands

2007-06-10 Borut Razem <borut.razem AT siol.net>

	* as/link/z80/lklibr.c: fixed mingw build warning
	  lklibr.c:575: warning: implicit declaration of function 'tolower'